--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "scripts": {
-    "frontend": "yarn dev --prefix ../frontend/",
+    "builder-side": "yarn dev --prefix ../builder-side/",
+    "user-side": "yarn dev --prefix ../user-side/",
     "backend": "yarn dev --prefix ../backend/",
-    "clear": "cd frontend && rm -rf .next && rm -rf cache",
-    "setup:frontend": "cd frontend && yarn",
+    "clear": "cd builder-side && rm -rf .next && rm -rf cache",
+    "setup:builder-side": "cd builder-side && yarn",
+    "setup:user-side": "cd user-side && yarn",
     "setup:backend": "cd backend && yarn",
-    "setup": "yarn install && yarn setup:frontend && yarn setup:backend",
-    "dev": "yarn clear && concurrently \"cd frontend && yarn dev\" \"cd backend && yarn develop\"",
+    "setup": "yarn install && yarn setup:builder-side && yarn setup:user-side && yarn setup:backend",
+    "dev": "yarn clear && concurrently \"cd builder-side && yarn dev\" \"cd user-side && yarn dev\" \"cd backend && yarn develop\"",
     "repo:upstream": "git fetch upstream && git merge upstream/main"
   },
   "dependencies": {
